BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_SpecialInstructions__c.object
<CustomObject>
    <description>This object is used to store Special Instructions for account and cases.</description>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Field to match with Account Type, Site Type in PeopleSoft</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SME_CHANNEL SALES</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Actual_Issue__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activate service</fullName>
                </value>
                <value>
                    <fullName>Adjustments not applied</fullName>
                </value>
                <value>
                    <fullName>Apply adjustments</fullName>
                </value>
                <value>
                    <fullName>Bad Number</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Back</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Considering</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>De-install Equipment</fullName>
                </value>
                <value>
                    <fullName>Dispatch Tech</fullName>
                </value>
                <value>
                    <fullName>Educated Customer</fullName>
                </value>
                <value>
                    <fullName>Escalate</fullName>
                </value>
                <value>
                    <fullName>Escalated to Hughes</fullName>
                </value>
                <value>
                    <fullName>Escalated to SIC</fullName>
                </value>
                <value>
                    <fullName>Escalated to Supervisor</fullName>
                </value>
                <value>
                    <fullName>Give Courtesy Token(s)</fullName>
                </value>
                <value>
                    <fullName>Inform customer</fullName>
                </value>
                <value>
                    <fullName>Inform management Customer Service Hughes</fullName>
                </value>
                <value>
                    <fullName>Inform management Field Service Hughes</fullName>
                </value>
                <value>
                    <fullName>Install - Escalate</fullName>
                </value>
                <value>
                    <fullName>Install - Updated</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Located</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Not located</fullName>
                </value>
                <value>
                    <fullName>Not Updated</fullName>
                </value>
                <value>
                    <fullName>Prioritize dispatch tech</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Process Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActivityTypeLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hsvc_ActivityType__c.AvailableToUser__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.HSvc_CaseRecordType__c</field>
                <operation>equals</operation>
                <valueField>Hsvc_ActivityType__c.RecordType__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hsvc_ActivityType__c</referenceTo>
        <relationshipName>Special_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Description__c</fullName>
        <label>Activity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Note</fullName>
                </value>
                <value>
                    <fullName>Customer Note</fullName>
                </value>
                <value>
                    <fullName>Consult</fullName>
                </value>
                <value>
                    <fullName>Escalation by Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Escalation Response</fullName>
                </value>
                <value>
                    <fullName>Inbound Email</fullName>
                </value>
                <value>
                    <fullName>Outbound Email</fullName>
                </value>
                <value>
                    <fullName>Case Creation</fullName>
                </value>
                <value>
                    <fullName>ARRIVAL</fullName>
                </value>
                <value>
                    <fullName>STOP</fullName>
                </value>
                <value>
                    <fullName>ETA</fullName>
                </value>
                <value>
                    <fullName>CLOSURE</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Issue__c</fullName>
        <label>Actual Issue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Customer_Request_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd party Device Issue</fullName>
                </value>
                <value>
                    <fullName>Account Issue</fullName>
                </value>
                <value>
                    <fullName>Account Name (Misspelling)</fullName>
                </value>
                <value>
                    <fullName>Account Ownership Change</fullName>
                </value>
                <value>
                    <fullName>Activate new service</fullName>
                </value>
                <value>
                    <fullName>Agent Callback</fullName>
                </value>
                <value>
                    <fullName>Amount Due</fullName>
                </value>
                <value>
                    <fullName>Application Issue</fullName>
                </value>
                <value>
                    <fullName>Application Issue - Customer</fullName>
                </value>
                <value>
                    <fullName>Application Issue - hughes</fullName>
                </value>
                <value>
                    <fullName>Authorized Contact</fullName>
                </value>
                <value>
                    <fullName>Automated Call - Activation</fullName>
                </value>
                <value>
                    <fullName>Available schedule</fullName>
                </value>
                <value>
                    <fullName>Bad Cables/Wiring</fullName>
                </value>
                <value>
                    <fullName>Bad Modem</fullName>
                </value>
                <value>
                    <fullName>Bad Radio</fullName>
                </value>
                <value>
                    <fullName>Bad Treatment - CSR</fullName>
                </value>
                <value>
                    <fullName>Bad Treatment - Technical</fullName>
                </value>
                <value>
                    <fullName>Bad website</fullName>
                </value>
                <value>
                    <fullName>Bad website/url</fullName>
                </value>
                <value>
                    <fullName>Bank Strike</fullName>
                </value>
                <value>
                    <fullName>Bill Date</fullName>
                </value>
                <value>
                    <fullName>Billing Address</fullName>
                </value>
                <value>
                    <fullName>Billing Issue</fullName>
                </value>
                <value>
                    <fullName>Bill Notification</fullName>
                </value>
                <value>
                    <fullName>Boleto to credit card</fullName>
                </value>
                <value>
                    <fullName>Boleto to debit</fullName>
                </value>
                <value>
                    <fullName>Bonus Zone</fullName>
                </value>
				<value>
                    <fullName>Response Time</fullName>
                </value>
				<value>
                    <fullName>Appeal/Escalation Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Service_Status__c</fullName>
        <label>Asset Service Status?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beam_Id__c</fullName>
        <label>Beam Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Status__c</fullName>
        <description>To compare with Status on Asset</description>
        <label>Business Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
                <value>
                    <fullName>Not Yet Commissioned</fullName>
                </value>
                <value>
                    <fullName>Terminal Activated</fullName>
                </value>
                <value>
                    <fullName>De-registered</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCR_Old_Value__c</fullName>
        <label>CCR Old Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseRecordType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Phone - inbound</fullName>
                    <default>true</default>
                    <label>Phone - inbound</label>
                </value>
                <value>
                    <fullName>Phone - outbound</fullName>
                </value>
                <value>
                    <fullName>Self-care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Re_assign__c</fullName>
        <label>Case Re-assign</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseRecordType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>TP Monterrey MOD</fullName>
                </value>
                <value>
                    <fullName>TP Monterrey Universal</fullName>
                </value>               
                <value>
                    <fullName>SDG Colombia</fullName>
                </value>
                <value>
                    <fullName>Hughes Colombia Distributor</fullName>
                </value>
                <value>
                    <fullName>South America Control Center</fullName>
                </value>               
                <value>
                    <fullName>Hughes Panama Distributor</fullName>
                </value>
                <value>
                    <fullName>SDG Panama</fullName>
                </value>
                <value>
                    <fullName>TP Monterrey MOD Panama</fullName>
                </value>
				 <value>
                    <fullName>Hughes de Colombia</fullName>
                </value>
                <value>
                    <fullName>Hughes de Panama</fullName>
                </value>
                <value>
                    <fullName>Hughes de Peru</fullName>
                </value>
                <value>
                    <fullName>Hughes de Ecuador</fullName>
                </value>
                <value>
                    <fullName>Hughes de Chile</fullName>
                </value>
                <value>
                    <fullName>Hughes de Corporate (HQ)</fullName>
                </value>
				<value>
                    <fullName>Ent SA Frontline</fullName>
                </value>
                <value>
                    <fullName>Ent SA Field Support</fullName>
                </value>
                <value>
                    <fullName>Ent SA Control Desk</fullName>
                </value>
                <value>
                    <fullName>Ent SA Business Analyst</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <label>Case Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chronic__c</fullName>
        <label>Chronic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Churn_Risk__c</fullName>
        <description>To compare with Churn Risk on Account</description>
        <label>Churn Risk</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This field is mapped to the BillingCountry field on Account.</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Queue__c</fullName>
        <label>Current Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Type__c</fullName>
        <label>Customer Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_SuspectedAsset__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acquisition Information</fullName>
                </value>
                <value>
                    <fullName>Add/Upgrade Service</fullName>
                </value>
                <value>
                    <fullName>Billing Info</fullName>
                </value>
                <value>
                    <fullName>Bill Inquiry/Dispute</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Recording</fullName>
                </value>
                <value>
                    <fullName>Cancel - Change of Address</fullName>
                </value>
                <value>
                    <fullName>Cancel - Competition</fullName>
                </value>
                <value>
                    <fullName>Cancel - Financial</fullName>
                </value>
                <value>
                    <fullName>Cancellation Information</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Cancel - Ownership Change</fullName>
                </value>
                <value>
                    <fullName>Cancel - Sales Practices</fullName>
                </value>
                <value>
                    <fullName>Cancel Service</fullName>
                </value>
                <value>
                    <fullName>Cancel - Technical</fullName>
                </value>
                <value>
                    <fullName>Cancel - Treatment</fullName>
                </value>
                <value>
                    <fullName>Cancel VSAT</fullName>
                </value>
                <value>
                    <fullName>Cannot Connect to Wi-Fi Booster</fullName>
                </value>
                <value>
                    <fullName>Cannot find Wi-Fi Network</fullName>
                </value>
                <value>
                    <fullName>Cannot Login</fullName>
                </value>
                <value>
                    <fullName>Cannot Receive Emails</fullName>
                </value>
                <value>
                    <fullName>Cannot Send Emails</fullName>
                </value>
                <value>
                    <fullName>Change Due Date - Temporary</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Change Payment Type</fullName>
                </value>
                <value>
                    <fullName>Change Service Plan</fullName>
                </value>
                <value>
                    <fullName>Client Request</fullName>
                </value>
                <value>
                    <fullName>Collect Payment</fullName>
                </value>
                <value>
                    <fullName>Contract / Policies / Terms of Use</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Ticket_Number__c</fullName>
        <label>Customer Ticket Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Value__c</fullName>
        <inlineHelpText>To compare with Customer Value on Account</inlineHelpText>
        <label>Customer Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_up_Due_Date__c</fullName>
        <label>Follow up Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gateway_Id__c</fullName>
        <description>To compare with Gateway Id on Asset</description>
        <label>Gateway Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNS_Company_ID__c</fullName>
        <inlineHelpText>This customer note will be displayed across all Customer segments. Please specify Account or HNS Company ID to specify the Accounts where this note should be displayed.</inlineHelpText>
        <label>HNS Company ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the location/company/global account.</description>
        <inlineHelpText>This customer note will be displayed across all Customer segments. Please specify Account or HNS Company ID to specify the Accounts where this note should be displayed.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>HSvc_SpecialInstructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Active__c</fullName>
        <formula>IF( AND( HSvc_EffectiveDate__c  &lt;= TODAY() , HSvc_ExpiryDate__c &gt; TODAY()),True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Actual_Change_Window_Duration__c</fullName>
        <label>Actual Change Window Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Actual_Task_Duration__c</fullName>
        <label>Actual Task Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Approved_by_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved by Contact</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Cases1_spi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Approved_by_Customer__c</fullName>
        <label>Approved by Customer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Awaiting Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_AssetID__c</fullName>
        <label>AssetID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>Special_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_BusinessHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BusinessHours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Special_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_CCR_New_Value__c</fullName>
        <label>CCR New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Calculated_Outage_Hours__c</fullName>
        <label>Calculated Outage Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_CaseRecordType__c</fullName>
        <description>This is to maintain the list of all applicable case types.</description>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B2B General Case</fullName>
                </value>
                <value>
                    <fullName>B2C General Case</fullName>
                </value>
                <value>
                    <fullName>Repair Work Order</fullName>
                </value>
                <value>
                    <fullName>Install Work Order</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Office Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_CaseStatus__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseRecordType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Awaiting SPR Code Release</fullName>
                </value>
                <value>
                    <fullName>Build Out Released</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancelled or Duplicate</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete—Impact</fullName>
                </value>
                <value>
                    <fullName>Complete—No issues</fullName>
                </value>
                <value>
                    <fullName>Complete—Pending Quality Assurance</fullName>
                </value>
                <value>
                    <fullName>Director Approved and Scheduled</fullName>
                </value>
                <value>
                    <fullName>EMRB Approved</fullName>
                </value>
                <value>
                    <fullName>ENG - SPR Active</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Escalated to Regulator</fullName>
                </value>
                <value>
                    <fullName>Failed QA</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Hold-Awaiting Hardware</fullName>
                </value>
                <value>
                    <fullName>Hold—Awaiting Information</fullName>
                </value>
                <value>
                    <fullName>Implementation Phase</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Investigation Closed</fullName>
                </value>
                <value>
                    <fullName>Investigation Open</fullName>
                </value>
                <value>
                    <fullName>MRB Approved</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>No Problem Found</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Open - Acknowledge</fullName>
                </value>
                <value>
                    <fullName>Open - De-escalate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_CaseSubtype__c</fullName>
        <label>Case Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cancel Core Service (Retention)</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>De-Install (System)</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>General information</fullName>
                </value>
                <value>
                    <fullName>Hughes Truck Roll</fullName>
                </value>
                <value>
                    <fullName>New Installation</fullName>
                </value>
                <value>
                    <fullName>Outage</fullName>
                </value>
                <value>
                    <fullName>Outbound Program</fullName>
                </value>
                <value>
                    <fullName>Partial Outage</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Regular Process</fullName>
                </value>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Service Issue</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Tool Issue</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Self Care Portal</fullName>
                </value>
                <value>
                    <fullName>Status Meter App</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Email Issue</fullName>
                </value>
                <value>
                    <fullName>Internet Performance</fullName>
                </value>
                <value>
                    <fullName>Video Streaming Issue</fullName>
                </value>
                <value>
                    <fullName>Wi-Fi Network</fullName>
                </value>
                <value>
                    <fullName>Compliance with Regulator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>